name:                project-euler
version:             0.1
synopsis:            Project Euler Solutions
description:         The solutions and work currently put in to solving problems available via Project Euler. Mostly in Haskell.
homepage:            https://github.com/stesta/project-euler#readme
author:              Steve Testa <steve@testasoftware.com>
maintainer:          Steve Testa <steve@testasoftware.com>
build-type:          Simple
cabal-version:       >=1.10
extra-Source-Files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Math.Combinatorics
                     , Math.Series
                     , Math.Integers
                     , Math.Primality
                     , Math.Pythagorean
  build-depends:       base
  default-language:    Haskell2010

executable project-euler
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields 
                        -O2 -fno-warn-orphans -fno-warn-unused-do-bind            
  other-modules:       Math.Combinatorics
                     , Math.Series
                     , Math.Integers
                     , Math.Primality
                     , Math.Pythagorean
  build-depends:       base
                     , mtl
                     , process
  default-language:    Haskell2010
